# Manim-Engine

manim_engine/: .gitignore  main.py  pyproject.toml  requirements.txt
manim_engine/ai/: ai_service.py  ai_worker.py  prompt_builder.py  provider_base.py  provider_registry.py  response_parser.py
manim_engine/ai/providers/: anthropic_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
manim_engine/app/: application.py  constants.py  controller.py  event_bus.py  events.py  service_container.py  signals.py
manim_engine/core/models/: __init__.py  ai_config.py  code_structure.py  project.py  scene_code.py  settings.py  snippet.py  version.py
manim_engine/core/services/: auth_service.py  code_parser.py  code_validator.py  linter.py  project_service.py  settings_service.py  snippets_service.py  variable_parser.py  version_service.py
manim_engine/renderer/: __init__.py  error_parser.py  render_config.py  render_result.py  render_service.py  render_worker.py  scene_file_manager.py
manim_engine/resources/: default_theme.json  manim_keywords.json
manim_engine/samples/: circle_animation.py
manim_engine/tests/test_ai/: test_prompt_builder.py  test_providers.py  test_response_parser.py
manim_engine/tests/test_core/: test_auth_service.py  test_code_parser.py  test_linter.py  test_project_service.py  test_snippet_model.py  test_snippets_service.py  test_variable_parser.py  test_version_service.py
manim_engine/tests/test_renderer/: test_error_parser.py  test_render_service.py  (+1 more)
manim_engine/ui/: __init__.py  main_window.py  qt_bridge.py  theme.py
(+52 files in other folders)
