[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "manim-engine"
version = "0.1.0"
description = "Desktop IDE for rapid Manim animation creation with AI assistance"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "httpx>=0.25.0",
    "keyring>=24.0.0",
    "manim>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
]
